# timekeeper_py

./: .gitignore  Pipfile  README.md  project.code-workspace  pyproject.toml  setup.cfg  setup.py
test/: test_database.py  test_times.py  test_times_model.py
timekeeper/: cli.py  config.py  database.py  model.py  notification.py  remote.py  times.py
timekeeper/cli/: __init__.py  drop.py  session.py  show.py  start.py  stop.py
timekeeper/tests/: test_database.py
