# Docs:
# https://click.palletsprojects.com/en/8.0.x/setuptools/
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html

[metadata]
name            = timekeeper
version         = 1.0.1
description     = CLI project for working hours timekeeping
author_email    = nazadelucca@gmail.com

[options]
packages = find:

python_requires = >=3.8

install_requires =
    tabulate        == 0.9.0
    click           == 8.1.3
    requests        == 2.28.2
    desktop-notifier== 3.4.3

[options.entry_points]
console_scripts =
    tk = timekeeper.cli:cli
